# CodeWarsHaskellVsFsharp

./: .gitignore  Fold.fs
curlPost/: Main.hs
customMonads/: CustomMonads.hs
learnyouahaskell/: Errors.hs  ExploringApplicative.hs  ExploringMonads.hs  ExploringPrelude.hs  wakeUpAndCodeOptimization.txt
setup-linux-arm7/: script.sh  stack.yaml
webscotty/: webscotty.cabal
webscotty/src/: ExploringIO.hs  Lib.hs  PostActions.hs  ScottyActions.hs  Serializings.hs  UrlToMatch.html
