name:                webscotty
version:             0.1.0.0
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, ScottyActions, PostActions
  build-depends:       base >= 4.7 && < 5, scotty, text, wai, http-types, aeson
  default-language:    Haskell2010

executable webscotty-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , webscotty
  default-language:    Haskell2010
